2004-12-14  Albert Chu  <chu11@llnl.gov>

        * gendersllnl.spec.in, src/Gendersllnl/Makefile.am,
	src/Libgendersllnl/Makefile.am, compat/Makefile.am: Fix 64bit
	build issue.

	* META: Updated for new release.

	* tagged gendersllnl-1-5-2
	
2004-11-30  Albert Chu  <chu11@llnl.gov>

	* NEWS: Updated.

	* tagged gendersllnl-1-5-1
	
2004-11-30  Mark Grondona <mgrondona@llnl.gov>

	* compat/Hostlist.pm (expand) : Don't attempt to expand regular
	  hostnames that happen to have the `-' character.

	* compat/Hostlist.pm (expand) : Allow a suffix after the brackets
	  when expanding a quadrics-style range (e.g. foo[0-5]-eth1).

2004-11-16  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Remove copyright, add license.
	
2004-11-12  Albert Chu  <chu11@llnl.gov>

	* README: Cleaned up.

	* gendersllnl.spec.in: Updated description.
	
2004-10-28  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Fixed additional port issues.

	* configure.ac: Require genders to be installed or disallow
	compilation.
	
2004-10-26  Albert Chu  <chu11@llnl.gov>

	* config/Make-rpm.mk: updated script for porting issues.

	* gendersllnl.spec.in: Fix for port issues.

	* Makefile.am, dist/Makefile.am: distcheck fixes.
	
2004-06-21  Albert Chu  <chu11@llnl.gov>

	* src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am,
	compat/Makefile.am: Fixes to make distcheck work.
	
2004-06-08  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am, compat/Makefile.am: Minor fixes for
	distcheck.
	
2004-05-19  Albert Chu  <chu11@llnl.gov>

	* Makefile.am compat/Makefile.am, man/Makefile.am,
	man/dist/Makefile.am, dist/Makefile.am,
	src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am: Fixed dist issues.
	
	* src/libgendersllnl/Makefile.am: Cleanup.
	
	* src/libgendersllnl/gendersllnl.c (genders_get_cluster): Fix
	compiler warning.
	
2004-04-30  Albert Chu  <chu11@llnl.gov>
