@@ -25,7 +25,7 @@ will most likely not work by default in a non-LLNL environment.
 %setup  -q -n %{name}-%{version}-%{release}
 
 %build
-%configure --program-prefix=%{?_program_prefix:%{_program_prefix}} --with-perl-install-prefix="$RPM_BUILD_ROOT"
+%configure --program-prefix=%{?_program_prefix:%{_program_prefix}} --with-perl-install-destdir="$RPM_BUILD_ROOT"
 make 
 
 %install
